resolve some open maintainability issues